Visual Check Command - Partial Initial Version